--- a/Visualizing_GPT_2's_Loss_Landscape.ipynb
+++ b/Visualizing_GPT_2's_Loss_Landscape.ipynb
@@ -3,42 +3,30 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "id": "Dgptqrg0zEY5"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/mlabonne/how-to-data-science/blob/main/Visualizing_GPT_2's_Loss_Landscape.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "# Visualizing GPT-2's Loss Landscape\n",
-        "\n",
-        "❤️ Created by [@maximelabonne](https://twitter.com/maximelabonne).\n",
         "\n",
         "Simple perturbation-based calculation of the negative log-likelihood loss in two directions, given \"I have a dream\" as input.\n",
         "\n",
         "Reference: [Visualizing the Loss Landscape of Neural Nets](https://arxiv.org/abs/1712.09913), by Li et al. (2018)"
-      ],
-      "metadata": {
-        "id": "Dgptqrg0zEY5"
-      }
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
-        "id": "lIYdn1woOS1n",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "lIYdn1woOS1n",
         "outputId": "ffd96eb4-2861-4658-e89d-383eaeb36c3b"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m7.2/7.2 MB\u001b[0m \u001b[31m47.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m236.8/236.8 kB\u001b[0m \u001b[31m14.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
@@ -54,6 +42,23 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 11,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4Wud37sZa1Y7",
+        "outputId": "c4e9c839-2938-4df8-c54f-96f5792cc0ed"
+      },
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "100%|██████████| 20/20 [12:42<00:00, 38.11s/it]\n"
+          ]
+        }
+      ],
       "source": [
         "%%time\n",
         "\n",
@@ -113,44 +118,11 @@
         "        # Revert the model parameters\n",
         "        for p, d1, d2 in zip(model.parameters(), direction1, direction2):\n",
         "            p.data.sub_(x[i]*d1 + y[j]*d2)\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "4Wud37sZa1Y7",
-        "outputId": "c4e9c839-2938-4df8-c54f-96f5792cc0ed"
-      },
-      "execution_count": 11,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "100%|██████████| 20/20 [12:42<00:00, 38.11s/it]\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Create 3D plot\n",
-        "fig = go.Figure(data=[go.Surface(z=Z, x=X, y=Y, \n",
-        "                                 showscale=False,)])\n",
-        "fig.update_layout(\n",
-        "    title=\"GPT-2's Loss Landscape\",\n",
-        "    autosize=True,\n",
-        "    width=1000,\n",
-        "    height=600,\n",
-        "    # scene=dict(\n",
-        "    #     xaxis=dict(visible=False),\n",
-        "    #     yaxis=dict(visible=False),\n",
-        "    #     zaxis=dict(visible=False),\n",
-        "    # )\n",
-        ")\n",
-        "fig.show()"
-      ],
+      "execution_count": 32,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -159,10 +131,8 @@
         "id": "5zcGwU4ji67L",
         "outputId": "f149f7eb-abfb-4b06-aead-ace3772c5379"
       },
-      "execution_count": 32,
       "outputs": [
         {
-          "output_type": "display_data",
           "data": {
             "text/html": [
               "<html>\n",
@@ -198,25 +168,43 @@
               "</html>"
             ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         }
+      ],
+      "source": [
+        "# Create 3D plot\n",
+        "fig = go.Figure(data=[go.Surface(z=Z, x=X, y=Y, \n",
+        "                                 showscale=False,)])\n",
+        "fig.update_layout(\n",
+        "    title=\"GPT-2's Loss Landscape\",\n",
+        "    autosize=True,\n",
+        "    width=1000,\n",
+        "    height=600,\n",
+        "    # scene=dict(\n",
+        "    #     xaxis=dict(visible=False),\n",
+        "    #     yaxis=dict(visible=False),\n",
+        "    #     zaxis=dict(visible=False),\n",
+        "    # )\n",
+        ")\n",
+        "fig.show()"
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "5Gvy1Bkut13M"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
     "colab": {
-      "provenance": [],
       "gpuType": "T4",
-      "include_colab_link": true
+      "include_colab_link": true,
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
